added some project setup information