@@ -2,3 +2,15 @@
 Timing Debug Tool
 
 More information will follow soon.
+
+OpenJDK:
+https://openjdk.java.net
+
+OpenJfx setup tutorial:
+https://openjfx.io/openjfx-docs/
+
+VM options for Temporal Viewer:
+```
+--module-path ${PATH_TO_FX}
+--add-modules=javafx.controls,javafx.fxml
+```
